# SaaS-payments-batch-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: batch_run.yml  ci.yml  docs.yml
docs/: architecture.md  cost_model.md  index.html  runbook.md
docs/adr/: 0001-medallion-on-s3.md  0002-duckdb.md  0003-github-actions.md  0004-mock-stripe.md  0005-webhooks.md  0006-idempotency-and-retries.md  0007-partitioning-and-file-sizing.md  index.html
mock_api/: app.py  data_generator.py
mock_api/routes/: __init__.py  charges.py  customers.py  invoices.py  payment_intents.py
src/payments_pipeline/: __init__.py  cli.py
src/payments_pipeline/clients/: mock_stripe.py  stripe_like_interface.py  webhook_signing.py
src/payments_pipeline/config/: logging.py  settings.py
src/payments_pipeline/extract/: base.py  charges.py  customers.py  invoices.py  payment_intents.py
src/payments_pipeline/load/: filesystem_adapter.py  paths.py  writer.py
src/payments_pipeline/quality/: freshness.py  reconciliation.py  schema.py
src/payments_pipeline/state/: manifests.py  watermarks.py
src/payments_pipeline/transform/: duckdb_runner.py  models.py
src/payments_pipeline/utils/: ids.py  retry.py  time.py
src/payments_pipeline/webhooks/: app.py  handler.py  repository.py
tests/fixtures/: pagination_page_1.json  pagination_page_2.json  webhook_bad_signature.json  webhook_valid.json
tests/integration/: test_local_e2e.py
tests/unit/: test_pagination.py  test_paths.py  test_retry.py  test_watermarks.py  test_webhook_idempotency.py
(+7 files in other folders)
