[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payments-pipeline"
version = "0.1.0"
description = "Stripe-style SaaS payments batch ELT pipeline with DuckDB, quality checks, and CI workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jeremiah Garcia" }
]
dependencies = [
  "boto3>=1.34.0",
  "duckdb>=1.0.0",
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pyarrow>=15.0.0",
  "requests>=2.31.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "types-requests>=2.31.0.20240406",
]

[project.scripts]
payments-pipeline = "payments_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["payments_pipeline*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["duckdb", "boto3", "uvicorn"]
ignore_missing_imports = true
